--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: Dockerfile
     ports:
       - "3002:3000"
-    container_name: school-dashboard
+    container_name: school-frontend
     networks:
       - npm_net
 
